undo adding border to PosterPlaylistContainer, fixed wonky proportions of PosterPlaylistSpinnerContainer (bad overlaps)

--- a/src/styles/ByPosterSection.css
+++ b/src/styles/ByPosterSection.css
@@ -104,10 +104,10 @@
   /* border: 2px solid yellow; */
   background-color: #09090D;
   height: 70px;
-  /* width: 100%; */
+  width: 100%;
   align-items: center;
   padding: 4%;
-  width: 100.25%;
+  width: 100%;
   border-radius: 15px 15px 0px 0px;
   box-sizing: border-box;
 
@@ -153,11 +153,11 @@
 
 .PosterPlaylistSpinnerContainer {
   position: absolute;
-  top: -2px;
-  left: -1px;
+  top: 0px;
+  left: 0px;
   background-color: #343750;
-  width: 100%;
-  height: 101%;
+  width: 99.5%;
+  height: 100%;
   /* border: 2px solid green; */
   justify-content: center;
   align-items: center;
@@ -184,9 +184,7 @@
   /* min-height: 70%; */
   /* max-height: 70%; */
   overflow-y: scroll;
-  border: 2px solid #343750;
-  border-top: none;
-  border-bottom: none;
+  /* border: 1px solid white; */
   justify-content: center;
   align-items: center;
   /* position: relative; */
@@ -213,7 +211,7 @@
 .PosterPlaylistCard {
   /* border: 1px solid red; */
   height: 70px;
-  width: 100%;
+  width: 99%;
   /* border: 1px solid rgb(85, 85, 85); */
   /* border: 1px solid orange; */
   border-top: none;
